// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vertical Tabs renders restricted tabs properly 1`] = `
<ul
  class="vertical-tabs-pf restrict-tabs test-vertical-tabs"
  id="vertical-tabs"
>
  <li
    class="vertical-tabs-pf-tab shown test-vertical-tabs-tab"
    id="all"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      All
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab active-descendant"
    id="one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One
    </button>
    <ul
      class="vertical-tabs-pf restrict-tabs"
    >
      <li
        class="vertical-tabs-pf-tab"
        id="one-one"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab One-One
        </button>
        <ul
          class="vertical-tabs-pf restrict-tabs active-tab"
        >
          <li
            class="vertical-tabs-pf-tab active"
            id="one-one-one"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              Tab One-One-One
            </button>
          </li>
          <li
            class="vertical-tabs-pf-tab"
            id="one-one-two"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              Tab One-One-Two
            </button>
          </li>
          <li
            class="vertical-tabs-pf-tab"
            id="one-one-three"
          >
            <button
              class="btn btn-link"
              type="button"
            >
              Tab One-One-Three
            </button>
          </li>
        </ul>
      </li>
      <li
        class="vertical-tabs-pf-tab"
        id="one-two"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab One-Two
        </button>
      </li>
      <li
        class="vertical-tabs-pf-tab"
        id="one-three"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab One-Three
        </button>
      </li>
    </ul>
  </li>
  <li
    class="vertical-tabs-pf-tab test-tab-class"
    id="two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Two
    </button>
    <ul
      class="vertical-tabs-pf restrict-tabs active-tab"
    >
      <li
        class="vertical-tabs-pf-tab active"
        id="two-one"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab Two-One
        </button>
      </li>
      <li
        class="vertical-tabs-pf-tab"
        id="two-two"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab Two-Two
        </button>
      </li>
      <li
        class="vertical-tabs-pf-tab"
        id="two-three"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab Two-Three
        </button>
      </li>
    </ul>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="three"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Three
    </button>
    <ul
      class="vertical-tabs-pf restrict-tabs"
    >
      <li
        class="vertical-tabs-pf-tab"
        id="three-one"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab Three-One
        </button>
      </li>
      <li
        class="vertical-tabs-pf-tab"
        id="three-two"
      >
        <button
          class="btn btn-link"
          type="button"
        >
          Tab Three-Two
        </button>
      </li>
    </ul>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="four"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Four
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="five"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Five
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="six"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Six
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="seven"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Seven
    </button>
  </li>
</ul>
`;

exports[`Vertical Tabs renders tabs properly 1`] = `
<ul
  class="vertical-tabs-pf test-vertical-tabs"
  id="vertical-tabs"
>
  <li
    class="vertical-tabs-pf-tab test-vertical-tabs-tab"
    id="all"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      All
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one-one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-One
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab active"
    id="one-one-one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-One-One
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one-one-two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-One-Two
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one-one-three"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-One-Three
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one-two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-Two
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="one-three"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab One-Three
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab test-tab-class"
    id="two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Two
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="two-one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Two-One
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="two-two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Two-Two
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="two-three"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Two-Three
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="three"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Three
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="three-one"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Three-One
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="three-two"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Three-Two
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="four"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Four
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="five"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Five
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="six"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Six
    </button>
  </li>
  <li
    class="vertical-tabs-pf-tab"
    id="seven"
  >
    <button
      class="btn btn-link"
      type="button"
    >
      Tab Seven
    </button>
  </li>
</ul>
`;
